<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Ship\'s Bell</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hour_glass_desc" translatable="false">Hour glas image</string>
	<string name="bell_img0" translatable="false">Show after one bell</string>
	<string name="bell_img1" translatable="false">Show after two bells</string>
	<string name="bell_img2" translatable="false">Show after three bells</string>
	<string name="bell_img3" translatable="false">Show after four bells</string>
	<string name="bell_img4" translatable="false">Show after five bells</string>
	<string name="bell_img5" translatable="false">Show after six bells</string>
	<string name="bell_img6" translatable="false">Show after seven bells</string>
	<string name="duty_period0_se" translatable="false">Förmiddagsvakten</string>
	<string name="duty_period1_se" translatable="false">Middagsvakten</string>
	<string name="duty_period2_se" translatable="false">1:a plattvakten</string>
	<string name="duty_period3_se" translatable="false">2:a plattvakten</string>
	<string name="duty_period4_se" translatable="false">Första vakten</string>
	<string name="duty_period5_se" translatable="false">Hundvakten</string>
	<string name="duty_period6_se" translatable="false">Dagvakten</string>
	<string name="duty_period0_eng" translatable="false">Forenoon watch</string>
	<string name="duty_period1_eng" translatable="false">Afternoon watch</string>
	<string name="duty_period2_eng" translatable="false">First dog watch</string>
	<string name="duty_period3_eng" translatable="false">Last dog watch</string>
	<string name="duty_period4_eng" translatable="false">First watch</string>
	<string name="duty_period5_eng" translatable="false">Middle watch</string>
	<string name="duty_period6_eng" translatable="false">Morning watch</string>
	<string name="language_headLine_se" translatable="false">Glas system:</string>
	<string name="language_headline_eng" translatable="false">Glass system:</string>
	<string name="language_se" translatable="false">Svenska</string>
	<string name="language_eng" translatable="false">UK, after 1797</string>
	<string name="language_eng2" translatable="false">UK, pre 1797</string>
	<color name="silver">#C0C0C0</color>
	<color name="black">#000000</color>
</resources>
