<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="klasJoensson.shipsbell.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/hourGlass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/hour_glass_desc"
        android:src="@drawable/hour_glass0" />

    <ImageView
        android:id="@+id/bell1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/hourGlass"
        android:contentDescription="@string/bell_img0"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bell1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/bell1"
        android:contentDescription="@string/bell_img1"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bell1"
        android:layout_toLeftOf="@+id/bell2"
        android:contentDescription="@string/bell_img2"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bell2"
        android:layout_alignTop="@+id/bell3"
        android:contentDescription="@string/bell_img3"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bell3"
        android:layout_toLeftOf="@+id/bell2"
        android:contentDescription="@string/bell_img4"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bell4"
        android:layout_alignTop="@+id/bell5"
        android:contentDescription="@string/bell_img5"
        android:src="@drawable/bell" />

    <ImageView
        android:id="@+id/bell7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bell5"
        android:layout_toLeftOf="@+id/bell2"
        android:contentDescription="@string/bell_img6"
        android:src="@drawable/bell" />

    <TextView
        android:id="@+id/duty_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hourGlass"
        android:layout_below="@+id/bell7"
        android:layout_marginTop="29dp"
        android:text="@string/duty_period2_eng"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/duty_period_font_size"
        android:textStyle="normal"
        android:typeface="serif" />

    <TextView
        android:id="@+id/language_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/duty_period"
        android:layout_below="@+id/duty_period"
        android:layout_marginTop="23dp"
        android:text="@string/language_headline_eng"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/bell1" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/engLangButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seLangButton"
        android:layout_alignTop="@+id/language_headline"
        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/language_eng" />

    <RadioButton
        android:id="@+id/seLangButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/engLangButton"
        android:layout_toLeftOf="@+id/bell6"
        android:onClick="onRadioButtonClicked"
        android:text="@string/language_se" />

</RelativeLayout>
